--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,11 @@ dmypy.json
 *.ico
 *.svg
 
+# Document files
+*.pdf
+*.doc
+*.docx
+
 # Output directories
 app/static/outputs/
 app/static/uploads/
